Added button to add contacts, added basic contact card, added app name

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Mad Track</title>
+        <title>Friends Check Friends</title>
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
         <div id="app-header">
-
+          <img
+          src="https://fontmeme.com/permalink/230911/5ebef2b724a6f5460d2b0d9676767fed.png"
+          alt="contact-header"
+          />
         </div>
 
         <div class="container">
@@ -18,7 +21,6 @@
                 type="text"
                 name="name"
                 value=""
-                phonenumber="phonenumber"
                 placeholder="Enter friend's name..."
                 class="input-text"
                 />
@@ -42,7 +44,7 @@
         Add Friends or Family for future contact. <button id="add-friends-or-family">Add Friends or Family.</button>
         </p>
 
-        <div id="friends-and-family"></div>
+        <div id="contact-collection"></div>
         <script type="text/javascript" src="src/index.js"></script>
     </body>
 </html>
